<?xml version="1.0"?>
<package>
  <name>robot_math_tools</name>
  <version>0.0.1</version>
  <description>Classes and libraries of math and geometry operations.</description>
  <maintainer email="nadiafig@mit.edu">Nadia Figueroa</maintainer>
  <author email="nadiafig@mit.edu">Nadia Figueroa</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>