<?xml version="1.0"?>
<package format="2">
  <name>robot_math_python</name>
  <version>0.0.0</version>
  <description>The robot_math_python package</description>

  <maintainer email="nadiafig@mit.edu"> Nadia Figueroa </maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
