<?xml version="1.0"?>
<package format="2">
  <name>robot_math_tools</name>
  <version>0.0.1</version>
  <description>The robot_math_tools meta package</description>

  <maintainer email="nadiafig@mit.edu">Nadia Figueroa, Interactive Robotics Group, MIT</maintainer>
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/melfa_robot</url>
  <url type="repository">https://github.com/tork-a/melfa_robot</url>
  <url type="bugtracker">https://github.com/tork-a/melfa_robot/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_math_cpp</exec_depend>
  <exec_depend>mathlib</exec_depend>  
  <exec_depend>robot_math_python</exec_depend>
  <exec_depend>modern_robotics</exec_depend>
  <exec_depend>pyquaternion</exec_depend>
  <!-- <exec_depend>melfa_cobot_moveit_config</exec_depend> -->

  <export>
    <metapackage/>
  </export>
</package>
